# python-project-lvl3

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: make_lint_and_test.yml
page_loader/: __init__.py  download.py  page_loader.py
page_loader/scripts/: main.py
tests/: test_download.py  test_page_loader.py
tests/fixtures/: parsed_data.html
