[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["MarinaIlina893 <marinailina893@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
